# dataloading_optimisation

./: .gitignore  .gitmodules  README.md  requirements.txt
ba_thesis/: ba_thesis.tex
dlrm/: data_utils.py  ensure_paths.py  requirements.txt  terabyte_data_cleaner.py  terabyte_data_files_utils.py  terabyte_data_loader.py  terabyte_dataloading_benchmark.py  terabyte_test_data_divider.py  tgrel_data_utils.py
dlrm/test_data/: day_0_repr_sample_1000r  day_0_repr_sample_small
dlrm_concur_dev/: data_utils.py
dlrm_cpp/: .clang-format  .gitignore  CMakeLists.txt  build.sh  concat_criteo_ad_data.cc  concat_criteo_ad_data.h  cpp_venv.sh  data_utils.py  get_criteo_ad_data.h  global.h  main.cc  makefile  parse.h  process_criteo_ad_data.cc  process_one_file.cc  terabyte_dataloading_benchmark.py
dlrm_cpp_single_io_pass/: CMakeLists.txt  concat_criteo_ad_data.cc  concat_criteo_ad_data.h  data_utils.py  format.sh  get_criteo_ad_data.cc  global.cc  global.h  main.cc  makefile  parse.h  process_criteo_ad_data.h  process_one_file.cc  process_one_file.h
dlrm_cpp_single_pass/: CMakeLists.txt  makefile
dlrm_single_io_pass/: data_utils.py
scripts/: README.md  clean_old_files.py  cmp_data_utils_outputs.py  count_distinct_ids.py  cpp_install.sh  ensure_paths.py  extract_samples.py  npz_diff.py  requirements.txt  terabyte_data_files_utils.py  terabyte_dataloading_benchmark.py  terabyte_dataloading_npz_utils.py  terabyte_test_data_divider.py
